--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 h1 {
-    margin-top: 70px;
+    margin-top: 50px;
     font-size: 3rem;
     color: #fff;
 }
@@ -58,7 +58,7 @@ h3 {
     gap: 1rem;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .one {
@@ -126,4 +126,24 @@ h3 {
     background-color: maroon;
     color: white;
     border: 1px solid red;
+}
+
+#startButton{
+    padding: 10px;
+    background-color: green;
+    color: white;
+    border: 1px solid rgb(5, 44, 2);
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+
+}
+
+#startButton:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 6px 20px rgba(2, 138, 16, 0.441);
+    transition: transform 0.3s, box-shadow 0.3s;
+    cursor: pointer;
+    background-color: greenyellow;
+    color: black;
+    border: 1px solid rgb(24, 81, 3);
 }
